Compilation fix